updated a few pages

--- a/conferences.html
+++ b/conferences.html
@@ -110,8 +110,7 @@
  <li>
    <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/"></a>Numerical Algebraic Geometry and Correlated Electrons:
    Generalized Grassmannians, Response Functions and Excited States,
-   Long program at the <a href="https://www.ipam.ucla.edu/">Institute for Pure and Applied Mathematics</a>, one semester in the
-   2026&ndash;2027 academic year.
+   Long program at the <a href="https://www.ipam.ucla.edu/">Institute for Pure and Applied Mathematics</a>, Spring 2027.
    Organizers: Guido von Rudorff,
    Fabian M. Faulstich,
    Todd J. Mart&iacute;nez,
@@ -119,6 +118,18 @@
    Bernd Sturmfels,
    Martin St&ouml;hr,
    Julia Westermayr.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>ICERM Semester, Metric Algebraic Geometry: Going Global, January&ndash;May 2027.
+   Organizers: P Breiding, S Di Rocco, J Kileel, K Kohn, A Lerario, C Meroni, J Rodriguez, A Seigal.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>SL-Math two concurrent programs January&ndash;May 2027:<br>
+   New Trends in Tropical Geometry, Organizers: P Bousseau, M Chan, I Itenberg, H Markwig, K Shaw<br>
+   Algebraic Combinatorics, 
+      Organizers: S Billey, S Corteel, P Di Francesco, C Vinzant, L Williams.   
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
@@ -146,23 +157,30 @@
  </li>  
  <!---------------------------------------------------------------------------------------------------->
  <li>
+   <a href="https://www.math.ttu.edu/~lchriste/slam2025.html">Southwest Local Algebra Meeting (SLAM)</a>,
+   1&ndash;2 March 2025.
+   Arizona State University, Tempe Arizona.
+ </li>  
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
    <a href="https://people.tamu.edu/~jml//symmetries-texas/main.html">Symmetries and Singularities in Texas</a>,
    31 January&ndash;2 February 2025.
    Texas A&amp;M University.
  </li>  
  <!---------------------------------------------------------------------------------------------------->
   <li> AMS Special session on
-    <a href="SanAntionio24/index.html"></a>Applications of Algebraic Geometry,
+    <a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_program_ss17.html">Applications of Algebraic Geometry</a>,
     <a href="http://www.ams.org/meetings/"></a>Joint Mathematical Meetings 11 January 2025,
     Seattle.
-    Co-organizing with <a href=""></a>Timothy Duff, <a href=""></a> Jesse Loucks-Tavitas, and <a href=""></a>Taylor Brysirwicz.
+    Co-organizing with <a href=""></a>Timothy Duff, <a href=""></a> Jesse Loucks-Tavitas, and <a href=""></a>Taylor Brysiewicz.
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
-  <li> Special session on
-    <a href="SanAntionio24/index.html"></a>Computations and Applications of Algebraic Geometry and Commutative Algebra,
-    <a href="https://ms-meet-2024.blogs.auckland.ac.nz/">AMS-AustMS-NZMS International Meeting</a>  in Auckland, New Zealand, 
-     December 9&ndash;13, 2024. 
+  <li> AMS Special session on
+    <a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_program_ss79.html">Mathematics of Topological Insulators</a>,
+    <a href="http://www.ams.org/meetings/"></a>Joint Mathematical Meetings 10 January 2025,
+    Seattle.
+    Organized by Matthew Faust, Xiaowen Zhu, and Alexis Drouot.
  </li>
  <!---------------------------------------------------------------------------------------------------->
 </UL>
