--- a/research/publications.html
+++ b/research/publications.html
@@ -219,28 +219,6 @@ Jump to <A HREF="#preprints">preprints</A>,
 <TABLE>
 
 
-<!------------------------------------------------------------------------>
- <TR valign=CENTER><TD align=right>7
-</TD> <TD>
-   <!--------------------------------------------------------------->             
-   <!----------------    Version of May 2023     ------------------->
-   <!--------------------------------------------------------------->             
-   <TABLE><TR valign=center>
-     <TD><A HREF="pdf/SplineProblems.pdf"><IMG SRC="images/pdf.gif"></A></TD>
-     <TD><A HREF="stories/WangShi/index.html"><IMG SRC="images/abs.gif"></A></TD>
-     <TD><FONT COLOR="FF00FF">
-      <I>Some problems at the interface of approximation theory and algebraic geometry</I></FONT>,
-       From  ``Approximation Theory and Numerical Analysis meet Algebra, Geometry, and Topology'', 
-      Palazzone Cortona 5&ndash;9  September 2022.
-    <tt>arXiv.org/2308.03211</tt>. 
-     </TD>
-    </TR>
-   </TABLE>
-<!--------------------------------------------------------------------->
-  </TD>
- </TR>
-<!------------------------------------------------------------------------>
-
 </TABLE>
 
 <!---------------------------------------------------------------------------->
@@ -284,6 +262,31 @@ Jump to <A HREF="#preprints">preprints</A>,
 
 
 <TABLE>
+
+<!------------------------------------------------------------------------>
+ <TR valign=CENTER><TD align=right>7
+</TD> <TD>
+   <!--------------------------------------------------------------->             
+   <!----------------    Version of May 2023     ------------------->
+   <!--------------------------------------------------------------->             
+   <TABLE><TR valign=center>
+     <TD><A HREF="pdf/SplineProblems.pdf"><IMG SRC="images/pdf.gif"></A></TD>
+     <TD><A HREF="stories/WangShi/index.html"><IMG SRC="images/abs.gif"></A></TD>
+     <TD><FONT COLOR="FF00FF">
+      <I>Some problems at the interface of approximation theory and algebraic geometry</I></FONT>,
+      pages 319&ndash;330
+      in 
+    <a href="https://link.springer.com/book/10.1007/978-981-97-6508-9">Approximation Theory and Numerical
+      Analysis Meet Algebra, Geometry, Topology</a>
+      Palazzone Cortona 5&ndash;9  September 2022.
+      Edited by Martina Lanini, Carla Manni, and Henry Schenck.
+     </TD>
+    </TR>
+   </TABLE>
+<!--------------------------------------------------------------------->
+  </TD>
+ </TR>
+<!------------------------------------------------------------------------>
 
 <!------------------------------------------------------------------------>
  <TR valign=CENTER><TD align=right>8
