--- a/talks/outreach.html
+++ b/talks/outreach.html
@@ -791,7 +791,7 @@
   <li>
     <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Lecture to undergraduates,
     New Mexico State University, 21 September 2023.
-   <a href="talks/23/SAGA.txt">Abstract</a>. 
+   <a href="23/SAGA.txt">Abstract</a>. 
   </li>
   <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
@@ -805,7 +805,7 @@
   <li>
     <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Lecture to undergraduates,
     Michigan State University, 27 April 2023.
-   <a href="talks/23/SAGA.txt">Abstract</a>. 
+   <a href="23/SAGA.txt">Abstract</a>. 
   </li>
  <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
@@ -1116,7 +1116,7 @@
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
     Graduate Student Organization Seminar, Texas A&amp;M University.
     September 28 2023,
-    <a href="talks/23/GSO.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+    <a href="23/GSO.txt">Abstract</a>. <!--&nbsp; <a href="23/MathFest.pdf">text of talk</a>.-->
   </li>
  <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
