--- a/talks.html
+++ b/talks.html
@@ -144,7 +144,8 @@
     <FONT COLOR="AA00FF"><I>The Critical Point Degree of a Bloch Variety</I></font>,
     Special Session on Computations and Applications of Algebraic Geometry and Commutative Algebra,
     AMS-AustMS-NZMS International Meeting  in Auckland, New Zealand, taking place December 9&ndash;13, 2024.
-    <a href="talks/24/CPD.txt">Abstract</a>
+    <a href="talks/24/CPD.txt">Abstract</a>.
+    < a href="talks/24/NZ_AMS.pdf">text of talk</a>.
    </li>
  <!--------------------------------------------------------------------------------------------------->
  <!--------------------------------------------------------------------------------------------------->
