--- a/conferences.html
+++ b/conferences.html
@@ -150,11 +150,20 @@
    Supported by NSF grant DMS-2349244.
  </li>
  <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="https://sites.google.com/view/24txla-ug-conference/"></a>Undergraduate Mathematics Conference,
+   22&ndash;23 March 2025, University of Houston.
+   <a href="https://sites.google.com/view/24txla-ug-conference/">Link to past conferences</a>.
+ </li>  
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
  <li>
    <a href="http://www.ims.cuhk.edu.hk/activities/conferences/mist/2025/">Schubert Calculus and Related Topics</a>,
    12&ndash;18 March 2025.
    Chinese University of Hong Kong.
  </li>  
+ <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
    <a href="https://www.math.ttu.edu/~lchriste/slam2025.html">Southwest Local Algebra Meeting (SLAM)</a>,
@@ -162,11 +171,13 @@
    Arizona State University, Tempe Arizona.
  </li>  
  <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
  <li>
    <a href="https://people.tamu.edu/~jml//symmetries-texas/main.html">Symmetries and Singularities in Texas</a>,
    31 January&ndash;2 February 2025.
    Texas A&amp;M University.
  </li>  
+ <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
   <li> AMS Special session on
     <a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_program_ss17.html">Applications of Algebraic Geometry</a>,
