--- a/conferences.html
+++ b/conferences.html
@@ -144,6 +144,27 @@
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
+   <a href="https://sites.google.com/site/jakefillman/summer-school-2025">Texas A\&M Summer School in Mathematical Physics</a>,
+   Texas A&amp;M University,
+   16  &ndash; 20 June  2025.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="https://people.tamu.edu/~maier/summerschool2025/">Modeling and Simulation with PDEs: Undergraduate Summer School</a>,
+   Texas A&amp;M University,
+   19  &ndash; 30 May  2025.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="http://www.fields.utoronto.ca/activities/24-25/commutative-algebra-applications">Commutative algebra and applications</a>.
+   26&ndash;30 May 2025.
+   Fields Institute Toronto.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
    <a href="conferences/TAGS25/index.html">Texas Algebraic Geometry Symposium</a>,
    Texas A&amp;M University,
    28  &ndash; 30 March 2025.<br>
