--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
      <td><a href="https://www.math.tamu.edu/seminars/cag/">Combinatorial Algebraic Geometry</a>
      </td>
      <td width=30></td>
-     <td></td>
-     <td></td>
+     <td>Tuesdays 12:45&ndash;2:00</td>
+     <td>Blocker 302</td>
    </tr>
    </tr>
       <tr> <td>&nbsp;</td>
@@ -399,7 +399,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Sat Nov 09 10:31:44 CST 2024 by sottile</p>  
+<p>Last modified: Mon Jan 06 17:26:44 PST 2025 by sottile</p>  
  </body>
 </html> 
 
