--- a/talks.html
+++ b/talks.html
@@ -137,6 +137,7 @@
     AMS Special Session on Mathematics of topological insulators,
     Joint Mathematics Meetings, Seattle, January 8&ndash;11 2025.
     <a href="talks/25/CPD.txt">Abstract</a>
+    <a href="talks/25/JMM_25.pdf">text of talk</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
@@ -145,7 +146,7 @@
     Special Session on Computations and Applications of Algebraic Geometry and Commutative Algebra,
     AMS-AustMS-NZMS International Meeting  in Auckland, New Zealand, taking place December 9&ndash;13, 2024.
     <a href="talks/24/CPD.txt">Abstract</a>.
-    < a href="talks/24/NZ_AMS.pdf">text of talk</a>.
+    <a href="talks/24/NZ_AMS.pdf">text of talk</a>.
    </li>
  <!--------------------------------------------------------------------------------------------------->
  <!--------------------------------------------------------------------------------------------------->
