--- a/research/stories/LGalois/LG5.html
+++ b/research/stories/LGalois/LG5.html
@@ -43,7 +43,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 19.41 Hours </font></td>
+    <td colspan=4><font size=+1> This took 2.99 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -71,7 +71,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 2.36 Days </font></td>
+    <td colspan=4><font size=+1> This took 8.74 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -99,7 +99,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 1.30 Days </font></td>
+    <td colspan=4><font size=+1> This took 4.80 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -127,7 +127,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 16.49 Hours </font></td>
+    <td colspan=4><font size=+1> This took 2.54 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -155,7 +155,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 16.00 Hours </font></td>
+    <td colspan=4><font size=+1> This took 2.47 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -183,7 +183,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 7.18 Hours </font></td>
+    <td colspan=4><font size=+1> This took 1.11 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -211,7 +211,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 1.97 Hours </font></td>
+    <td colspan=4><font size=+1> This took 7.27 GHz-Hours </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -253,7 +253,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 3.18 Days </font></td>
+    <td colspan=4><font size=+1> This took 11.75 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -295,7 +295,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 15.03 Hours </font></td>
+    <td colspan=4><font size=+1> This took 2.32 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -337,7 +337,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 2.51 Days </font></td>
+    <td colspan=4><font size=+1> This took 9.29 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -379,7 +379,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 2.80 Days </font></td>
+    <td colspan=4><font size=+1> This took 10.36 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -421,7 +421,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 2.12 Days </font></td>
+    <td colspan=4><font size=+1> This took 7.85 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -463,7 +463,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 2.99 Days </font></td>
+    <td colspan=4><font size=+1> This took 11.05 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -505,7 +505,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 2.26 Days </font></td>
+    <td colspan=4><font size=+1> This took 8.35 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -547,7 +547,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 11.18 Hours </font></td>
+    <td colspan=4><font size=+1> This took 1.72 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -589,7 +589,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 1.10 Days </font></td>
+    <td colspan=4><font size=+1> This took 4.08 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -631,7 +631,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 1.29 Days </font></td>
+    <td colspan=4><font size=+1> This took 4.76 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -673,7 +673,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 1.19 Days </font></td>
+    <td colspan=4><font size=+1> This took 4.40 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -715,7 +715,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 1.38 Days </font></td>
+    <td colspan=4><font size=+1> This took 5.12 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -757,7 +757,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 17.30 Hours </font></td>
+    <td colspan=4><font size=+1> This took 2.67 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -799,7 +799,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 18.50 Hours </font></td>
+    <td colspan=4><font size=+1> This took 2.85 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -841,7 +841,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 2.59 Hours </font></td>
+    <td colspan=4><font size=+1> This took 9.59 GHz-Hours </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -883,7 +883,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 5.90 Hours </font></td>
+    <td colspan=4><font size=+1> This took 21.85 GHz-Hours </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -925,7 +925,7 @@
     <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 6.53 Hours </font></td>
+    <td colspan=4><font size=+1> This took 1.01 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -988,7 +988,7 @@
     <td colspan=4><font size=+1> This computed 1500000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 6.43 Days </font></td>
+    <td colspan=4><font size=+1> This took 23.80 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -1051,7 +1051,7 @@
     <td colspan=4><font size=+1> This computed 4000000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 13.67 Days </font></td>
+    <td colspan=4><font size=+1> This took 50.59 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -1114,7 +1114,7 @@
     <td colspan=4><font size=+1> This computed 2000000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 17.26 Days </font></td>
+    <td colspan=4><font size=+1> This took 63.86 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -1177,7 +1177,7 @@
     <td colspan=4><font size=+1> This computed 10000000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 12.49 Days </font></td>
+    <td colspan=4><font size=+1> This took 46.21 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -1289,7 +1289,7 @@
     <td colspan=4><font size=+1> This computed 1500000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 33.69 Days </font></td>
+    <td colspan=4><font size=+1> This took 124.65 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -1401,7 +1401,7 @@
     <td colspan=4><font size=+1> This computed 1500000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 25.88 Days </font></td>
+    <td colspan=4><font size=+1> This took 95.76 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -1513,7 +1513,7 @@
     <td colspan=4><font size=+1> This computed 5000000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 86.17 Days </font></td>
+    <td colspan=4><font size=+1> This took 318.81 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -1625,7 +1625,7 @@
     <td colspan=4><font size=+1> This computed 5000000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 26.98 Days </font></td>
+    <td colspan=4><font size=+1> This took 99.83 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -1751,7 +1751,7 @@
     <td colspan=4><font size=+1> This computed 2000000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 21.13 Days </font></td>
+    <td colspan=4><font size=+1> This took 78.17 GHz-Days </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -1763,121 +1763,121 @@
   <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr>  <!-------------------------------------------------->
   <tr>
     <td>&nbsp;8 </td>
-    <td align=right> 751666&nbsp;</td>
-    <td align=right> 0.1253&nbsp;</td>
-    <td align=right> 144.3199&nbsp;</td>
+    <td align=right> 1875494&nbsp;</td>
+    <td align=right> 0.1250&nbsp;</td>
+    <td align=right> 144.0379&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;4,4 </td>
-    <td align=right> 562855&nbsp;</td>
-    <td align=right> 0.0938&nbsp;</td>
-    <td align=right> 108.0682&nbsp;</td>
+    <td align=right> 1407908&nbsp;</td>
+    <td align=right> 0.0939&nbsp;</td>
+    <td align=right> 108.1273&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;2,6 </td>
-    <td align=right> 999182&nbsp;</td>
+    <td align=right> 2497184&nbsp;</td>
     <td align=right> 0.1665&nbsp;</td>
-    <td align=right> 191.8430&nbsp;</td>
+    <td align=right> 191.7837&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;2,2,4 </td>
-    <td align=right> 938845&nbsp;</td>
+    <td align=right> 2347885&nbsp;</td>
     <td align=right> 0.1565&nbsp;</td>
-    <td align=right> 180.2583&nbsp;</td>
+    <td align=right> 180.3176&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;2,2,2,2 </td>
-    <td align=right> 171295&nbsp;</td>
-    <td align=right> 0.0285&nbsp;</td>
-    <td align=right> 32.8886&nbsp;</td>
+    <td align=right> 429632&nbsp;</td>
+    <td align=right> 0.0286&nbsp;</td>
+    <td align=right> 32.9957&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;1,3,4 </td>
-    <td align=right> 499898&nbsp;</td>
-    <td align=right> 0.0833&nbsp;</td>
-    <td align=right> 95.9804&nbsp;</td>
+    <td align=right> 1250659&nbsp;</td>
+    <td align=right> 0.0834&nbsp;</td>
+    <td align=right> 96.0506&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;1,2,2,3 </td>
-    <td align=right> 248673&nbsp;</td>
-    <td align=right> 0.0414&nbsp;</td>
-    <td align=right> 47.7452&nbsp;</td>
+    <td align=right> 624657&nbsp;</td>
+    <td align=right> 0.0416&nbsp;</td>
+    <td align=right> 47.9737&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;1,1,3,3 </td>
-    <td align=right> 334055&nbsp;</td>
-    <td align=right> 0.0557&nbsp;</td>
-    <td align=right> 64.1386&nbsp;</td>
+    <td align=right> 832915&nbsp;</td>
+    <td align=right> 0.0555&nbsp;</td>
+    <td align=right> 63.9679&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;1,1,2,4 </td>
-    <td align=right> 375401&nbsp;</td>
-    <td align=right> 0.0626&nbsp;</td>
-    <td align=right> 72.0770&nbsp;</td>
+    <td align=right> 936132&nbsp;</td>
+    <td align=right> 0.0624&nbsp;</td>
+    <td align=right> 71.8949&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;1,1,2,2,2 </td>
-    <td align=right> 186125&nbsp;</td>
-    <td align=right> 0.0310&nbsp;</td>
-    <td align=right> 35.7360&nbsp;</td>
+    <td align=right> 467505&nbsp;</td>
+    <td align=right> 0.0312&nbsp;</td>
+    <td align=right> 35.9044&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;1,1,1,2,3 </td>
-    <td align=right> 500544&nbsp;</td>
+    <td align=right> 1250818&nbsp;</td>
     <td align=right> 0.0834&nbsp;</td>
-    <td align=right> 96.1045&nbsp;</td>
+    <td align=right> 96.0628&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;1,1,1,1,4 </td>
-    <td align=right> 62530&nbsp;</td>
+    <td align=right> 155862&nbsp;</td>
     <td align=right> 0.0104&nbsp;</td>
-    <td align=right> 12.0058&nbsp;</td>
+    <td align=right> 11.9702&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;1,1,1,1,2,2 </td>
-    <td align=right> 218512&nbsp;</td>
+    <td align=right> 546610&nbsp;</td>
     <td align=right> 0.0364&nbsp;</td>
-    <td align=right> 41.9543&nbsp;</td>
+    <td align=right> 41.9796&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;1,1,1,1,1,3 </td>
-    <td align=right> 83050&nbsp;</td>
-    <td align=right> 0.0138&nbsp;</td>
-    <td align=right> 15.9456&nbsp;</td>
+    <td align=right> 208341&nbsp;</td>
+    <td align=right> 0.0139&nbsp;</td>
+    <td align=right> 16.0006&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;1,1,1,1,1,1,2 </td>
-    <td align=right> 62385&nbsp;</td>
+    <td align=right> 155691&nbsp;</td>
     <td align=right> 0.0104&nbsp;</td>
-    <td align=right> 11.9779&nbsp;</td>
+    <td align=right> 11.9571&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;1,1,1,1,1,1,1,1 </td>
-    <td align=right> 4983&nbsp;</td>
+    <td align=right> 12707&nbsp;</td>
     <td align=right> 0.0008&nbsp;</td>
-    <td align=right> 0.9567&nbsp;</td>
+    <td align=right> 0.9759&nbsp;</td>
   </tr>
   <!-------------------------------------------------->
   <tr>
-    <td colspan=4><font size=+1> This computed 5999999 Frobenius elements </font></td>
+    <td colspan=4><font size=+1> This computed 15000000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 68.45 Days </font></td>
+    <td colspan=4><font size=+1> This took 1.78 GHz-Years </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -2003,7 +2003,7 @@
     <td colspan=4><font size=+1> This computed 100000000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 224.76 Days </font></td>
+    <td colspan=4><font size=+1> This took 2.28 GHz-Years </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -2101,7 +2101,7 @@
     <td colspan=4><font size=+1> This computed 140000000 Frobenius elements </font></td>
   </tr>
   <tr>
-    <td colspan=4><font size=+1> This took 561.91 Days </font></td>
+    <td colspan=4><font size=+1> This took 5.69 GHz-Years </font></td>
   </tr>
 </table>
 <!----------------------------------------------------------------------------------------------------><br>
@@ -2109,7 +2109,7 @@
 <hr>
 <!---------------------------------------------------------------------------------------------------->
 <font color="#aa00aa">
-<i> Created Sun  5 Jan 2025 14:31:40 PST
+<i> Created Tue Jan 14 10:12:56 PM CST 2025
  by Frank Sottile</i>
 </font>
 <body>
