--- a/talks.html
+++ b/talks.html
@@ -126,11 +126,20 @@
     <a href="talks/25/AG25.txt">abstract</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
   <li>
-    <font COLOR="AA00FF"><i></i>TBA</font>,
-    <a href="http://www.ims.cuhk.edu.hk/activities/conferences/mist/2025/mist_workshop_12-18mar2025/">Schubert calculus and
+    <font COLOR="AA00FF"><i></i>Participation Cancelled by TAMU</font>,
+    <a href="http://www.ims.cuhk.edu.hk/activities/conferences/mist/2025/mist_workshop_12-18mar2025/">Schubert calculus and 
       related topics</a>, MIST 2025 Workshop, The Chinese University of Hong Kong, 12&ndash;18 March 2025.
   </li>
+  <!-------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>,
+    Algebra and Combinatorics Seminar, Texas A&amp;M University, 24 January 2025.
+    <a href="talks/21/Discriminant.txt">abstract</a>.  
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The Critical Point Degree of a Periodic Graph</I></font>,
@@ -140,6 +149,12 @@
     <a href="talks/25/JMM_25.pdf">text of talk</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+ <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The Critical Point Degree of a Bloch Variety</I></font>,
@@ -150,24 +165,11 @@
    </li>
  <!--------------------------------------------------------------------------------------------------->
  <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
- <!--------------------------------------------------------------------------------------------------->
- <!--------------------------------------------------------------------------------------------------->
  <li> <FONT COLOR="AA00FF"><I>The Five-Color Theorem</I></font>,
    <a href="https://mathcircle.tamu.edu/">TAMU Math Circle&ndash;Advanced</a>,
     9 November 2024. <a href="talks/24/Five-color.txt">abstract</a>.
  </li>
  <!--------------------------------------------------------------------------------------------------->
- <!--------------------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>,
-    Algebra and Combinatorics Seminar, Texas A&amp;M University, 8 November 2024.
-    <a href="talks/21/Discriminant.txt">abstract</a>.  
-   </li>
-  <!-------------------------------------------------------------------------------------------------->
  <!--------------------------------------------------------------------------------------------------->
   <li> <FONT COLOR="AA00FF"><I>Hyperbolic Soccerballs</I></font>,
        AIM Mathematics Teachers' Circle, AIM, 24 October 2024.
